tests/toy/neg/000606_mutation.toylang
program a = { a = a == do; } .
